syntax = "proto3";
package com.antigravity;

option java_package = "com.antigravity.proto";
option java_multiple_files = true;
option java_outer_classname = "ReactionTimeProto";

message ReactionTime {
  string objectId = 1;
  float reaction_time = 2;
}
